updated with href

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <div class="header">
   <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
-  <a class="has-border">Resume</a>
-    <a class="has-border">About Me</a>
-    <a class="has-border">My Blog</a>
-    <a class="has-border">Contact Me</a>
+  <a href="./MarkP_Resume.pdf" target="_blank" >Resume</a>
+  <a href="default.asp" target="_blank">About Me</a>
+  <a href="default.asp" target="_blank">My Blog</a>
+  <a href="default.asp" target="_blank">Contact Me</a>
      
 
 </div>
@@ -45,10 +45,11 @@
 </div>
 
 <div class="footer">
-  <a class="has-border">Resume</a>
-    <a class="has-border">About Me</a>
-    <a class="has-border">My Blog</a>
-    <a class="has-border">Contact Me</a>
+  <a href="./MarkP_Resume.pdf" target="_blank" >Resume</a>
+  <a href="default.asp" target="_blank">About Me</a>
+  <a href="default.asp" target="_blank">My Blog</a>
+  <a href="default.asp" target="_blank">Contact Me</a>
+    
     <p>Electrical Engineer learning Full Stack Development to bring solutions to the electrical field service industry.</p>
    
 </div>
