--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
   <a href="./MarkP_Resume.pdf" target="_blank" >Resume</a>
   <a href="default.asp" target="_blank">About Me</a>
-  <a href="default.asp" target="_blank">My Blog</a>
+  <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank">My Blog</a>
   <a href="default.asp" target="_blank">Contact Me</a>
      
 
@@ -47,7 +47,7 @@
 <div class="footer">
   <a href="./MarkP_Resume.pdf" target="_blank" >Resume</a>
   <a href="default.asp" target="_blank">About Me</a>
-  <a href="default.asp" target="_blank">My Blog</a>
+  <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank">My Blog</a>
   <a href="default.asp" target="_blank">Contact Me</a>
     
     <p>Electrical Engineer learning Full Stack Development to bring solutions to the electrical field service industry.</p>
