--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="header">
   <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
   <a href="./MarkP_Resume.pdf" target="_blank" >Resume</a>
-  <a href="default.asp" target="_blank">About Me</a>
+  <a href="https://www.google.com/" target="_blank">About Me</a>
   <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank">My Blog</a>
   <a href="default.asp" target="_blank">Contact Me</a>
      
