--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <div class="header">
   <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
   <a href="./MarkP_Resume.pdf" target="_blank" >Resume</a>
-  <a href="https://www.google.com/" target="_blank">About Me</a>
+  <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/AboutMe" target="_blank">About Me</a>
   <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank">My Blog</a>
-  <a href="default.asp" target="_blank">Contact Me</a>
+  <a href="https://www.linkedin.com/in/pustejovsky-mark-37645133" target="_blank">Contact Me</a>
      
 
 </div>
@@ -46,9 +46,9 @@
 
 <div class="footer">
   <a href="./MarkP_Resume.pdf" target="_blank" >Resume</a>
-  <a href="default.asp" target="_blank">About Me</a>
+  <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/AboutMe" target="_blank">About Me</a>
   <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank">My Blog</a>
-  <a href="default.asp" target="_blank">Contact Me</a>
+  <a href="https://www.linkedin.com/in/pustejovsky-mark-37645133" target="_blank">Contact Me</a>
     
     <p>Electrical Engineer learning Full Stack Development to bring solutions to the electrical field service industry.</p>
    
