second try to update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <button id="portfolio">Portfolio</button>
   </div>
   <div class="column" style="background-color: white;">
-    <h3>This section is for: JUST HAVING FUN!</h3>
+    <h3>This section is for: JUST HAVING FUN!!</h3>
     
     <img src="https://cdn.pixabay.com/photo/2016/10/02/19/50/dog-1710298_960_720.png" class="rotate" width="95" height="95" />
     <img src="https://cdn.pixabay.com/photo/2016/10/02/19/50/dog-1710298_960_720.png" class="rotate" width="95" height="95" />
