--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -66,7 +66,7 @@
       <h2 class="w3-center">Photos of Hunting Stands</h2>
       <div class="w3-content w3-display-container">
         <img class="Slides" src="./bongolo2.JPG" style="width:100%">
-        <img class="Slides" src="./bongolonewview.JPG" style="width:100%">
+        <img class="Slides" src="./bongolonewview2.JPG" style="width:100%">
         <img class="Slides" src="./bungolo..JPG" style="width:100%">
         <img class="Slides" src="./Redneck1.JPG" style="width:100%">
         <img class="Slides" src="./Redneck2.JPG" style="width:100%">
