--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="header">
   <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
-  <a href="./MarkP_Resume.pdf" target="_blank" >Resume</a>
+  <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Resume" target="_blank" >Resume</a>
   <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/AboutMe" target="_blank">About Me</a>
   <a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank">My Blog</a>
   <a href="https://www.linkedin.com/in/pustejovsky-mark-37645133" target="_blank">Contact Me</a>
