--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css">
-    <title>First-Responsive-Website</title>
+    <title>ABOUT ME</title>
     <link href="https://fonts.googleapis.com/css?family=Akronim|Slabo+27px&display=swap" rel="stylesheet">
   </head>
   <body class="container">
