Fixing Portfolio button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="column" style="background-color:white;"><img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
   <h1>Mark Pustejovsky</h1>
   <h2>Sudent of Web Development</h2>
-  <button id="portfolio">Portfolio</button>
+  <button id="portfolio"><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Portfolio/" target="_blank" >Portfolio</a></button>
   </div>
   <div class="column" style="background-color: white;">
     <h3>This section is for: JUST HAVING FUN!!</h3>
