--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -20,9 +20,9 @@
       <p>Full Stack Web Design Projects
       <ul>
         <li><a href="https://mpustejovsky.github.io/NASA/" target="_blank">NASA Web page</a></li>
-        <li><a href="https://mpustejovsky.github.io/TicTacToe-101/" target="_blank">Tic Tac Toe</a></li>
+        <li><a href="https://mpustejovsky.github.io/TicTacToe-101/" target="_blank">Tic Tac Toe 101</a></li>
         <li><a href="https://mpustejovsky.github.io/GridTableLayout/" target="_blank">Grid Table Layout</a></li>      
-        <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
+        <li><a href="https://mpustejovsky.github.io/calculator-app-101/" target="_blank">Calculator App 101</a></li>   
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
