added link to image gallery

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,7 +23,7 @@
         <li><a href="https://mpustejovsky.github.io/TicTacToe-101/" target="_blank">Tic Tac Toe 101</a></li>
         <li><a href="https://mpustejovsky.github.io/GridTableLayout/" target="_blank">Grid Table Layout</a></li>      
         <li><a href="https://mpustejovsky.github.io/calculator-app-101/" target="_blank">Calculator App 101</a></li>   
-        <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
+        <li><a href="https://mpustejovsky.github.io/Image-Gallery/" target="_blank">Image-Gallery</a></li>   
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>    
