--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -33,7 +33,7 @@
       <p>Unity & C#
       <ul>
         <li><a href="https://mpustejovsky.github.io/DeerHunt/" target="_blank">Text Game</a></li>
-        <li><a href="https://mpustejovsky.github.io/NumberWizard/" target="_blank"></a></li>
+        <li><a href="https://mpustejovsky.github.io/NumberWizard/" target="_blank">Number Wizard Game</a></li>
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>      
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
