updated todo on portfolio

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -25,7 +25,7 @@
         <li><a href="https://mpustejovsky.github.io/calculator-app-101/" target="_blank">Calculator App 101</a></li>   
         <li><a href="https://mpustejovsky.github.io/Image-Gallery/" target="_blank">Image-Gallery</a></li>   
         <li><a href="https://mpustejovsky.github.io/hairSalonWebsite/" target="_blank">Hair Salon Website</a></li>   
-        <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>   
+        <li><a href="https://mpustejovsky.github.io/Dummy-Data-Todo-List/" target="_blank">API TODO List</a></li>   
         <li><a href="https://mpustejovsky.github.io/ACA_web101_Mark_Pustejovsky/Blog" target="_blank"></a></li>    
       </ul>
     </p></nav>
